# Khata

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  DESIGN.md  Dockerfile  POSTGRES.md  README.md  SECURITY.md  master-reference.html  setup.bat  setup.sh
android/: .gitignore  build.gradle.kts  (+2 more)
backend/: Cargo.toml
backend/migrations/: 0001_users.sql  0002_statements.sql  0003_transactions.sql  0004_chat_messages.sql  0005_indexes.sql  0006_rls.sql  0007_add_category.sql  0008_admin_setup.sql  0009_transfers.sql  0010_investments.sql  0011_category_rules.sql  0012_notes.sql  0013_manual_entries.sql  0014_budgets.sql  0015_portfolio.sql  0016_categories.sql  0017_drop_investment_col.sql  0018_version.sql  0019_audit_log.sql  0020_must_reset_password.sql  0021_analytics_layout.sql  0022_sync_metadata.sql
backend/src/: audit.rs  config.rs  db.rs  error.rs  main.rs
backend/src/accounts/: handlers.rs  mod.rs  models.rs
backend/src/auth/: handlers.rs  middleware.rs  mod.rs  models.rs
backend/src/budgets/: handlers.rs  mod.rs  models.rs
backend/src/categories/: handlers.rs  mod.rs  models.rs
backend/src/chat/: claude_cli.rs  handlers.rs  mod.rs  models.rs  predefined.rs  sql_validator.rs
backend/src/ingest/: categorize.rs  detect.rs  fingerprint.rs  handlers.rs  mod.rs  models.rs  normalize.rs  parse.rs  store.rs
backend/src/ingest/profiles/: axis.rs  generic.rs  hdfc.rs  icici.rs  mod.rs  sbi.rs
backend/src/portfolio/: handlers.rs  mod.rs  models.rs
backend/src/rules/: handlers.rs  mod.rs  models.rs
backend/src/txns/: handlers.rs  mod.rs  models.rs
(+227 files in other folders)
