[package]
name = "khata"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio", "tls-rustls", "postgres",
  "uuid", "chrono", "macros", "migrate"
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
argon2 = "0.5"
calamine = "0.26"
csv = "1"
sqlparser = "0.55"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
thiserror = "1"
zip = "2"
dotenvy = "0.15"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
